overflow hidden fix due to focus bug being cut out

--- a/packages/react-components/src/checkbox/src/Checkbox.css
+++ b/packages/react-components/src/checkbox/src/Checkbox.css
@@ -3,7 +3,7 @@
     align-items: center;
     cursor: pointer;
     line-height: 1;
-    overflow: hidden;
+    max-width: 100%;
 }
 
 .o-ui.checkbox .box {
